bump version to 5.0.1